--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sequelize": "^5.21.3",
     "slugify": "^1.3.6",
     "user-instagram": "^1.0.4",
-    "request-promise": "*"
+    "request-promise": "*",
+    "googleapis": "*"
   }
 }
