--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "googleapis": "*",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "request": "^2.88.0",
     "request-promise": "*",
